# pluginloader

./: .gitignore  CMakeLists.txt
plugins/: demo.lua
src/: Plugin.cpp  Plugin.h  PluginLoader.cpp  PluginLoader.h  PluginType.h  Util.hpp  luainc.h  main.cpp
src/plugins/: demo.lua  demo2.lua
